--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -13,8 +13,8 @@
         android:orientation="horizontal">
         <androidx.cardview.widget.CardView
             android:layout_gravity="center"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_marginLeft="10dp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="250dp">
@@ -92,14 +92,15 @@
                     android:layout_margin="20dp"
                     >
                     <ImageView
-                        android:layout_width="82dp"
-                        android:layout_height="83dp"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
                         android:src="@drawable/gitf"
                         />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="14dp"
+                        android:textColor="@color/black"
                         android:layout_marginLeft="20dp"
                         android:layout_gravity="center_vertical"
                         android:text="Nhận nhiều ưu đãi hỡn khi tham gia giờ vàng .."
@@ -111,12 +112,14 @@
         </LinearLayout>
 
             <LinearLayout
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginTop="20dp"
                 >
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/crv_user_ThongTinTaiKhoan"
                     android:layout_width="match_parent"
                     android:layout_height="65dp">
                     <LinearLayout
@@ -126,55 +129,36 @@
                         android:layout_gravity="center_vertical"
                         >
                         <ImageView
-                            android:layout_width="51dp"
-                            android:layout_height="48dp"
+                            android:layout_gravity="left"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:src="@drawable/account"
                             />
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_gravity="right"
+                            android:textColor="@color/black"
+                            android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:layout_marginRight="10dp"
                             android:text="THÔNG TIN TÀI KHOẢN"
-                            android:gravity="center_vertical"
+                            android:gravity="right"
                             />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#C89191"/>
             <!--        -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
 
-                >
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="65dp">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_gravity="center_vertical"
-                        >
-                        <ImageView
-                            android:layout_width="51dp"
-                            android:layout_height="48dp"
-                            android:src="@drawable/mone"
-                            />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:text="ƯU ĐÃI"
-                            android:gravity="center_vertical"
-                            />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/crv_user_DiaChiCuaAnh"
                     android:layout_width="match_parent"
                     android:layout_height="65dp">
                     <LinearLayout
@@ -184,19 +168,25 @@
                         android:layout_gravity="center_vertical"
                         >
                         <ImageView
-                            android:layout_width="51dp"
-                            android:layout_height="48dp"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:src="@drawable/iconmappin"
                             />
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:text="ĐỊA CHỈ CỦA ANH "
-                            android:gravity="center_vertical"
+                            android:textColor="@color/black"
+                            android:layout_marginRight="10dp"
+                            android:gravity="right"
                             />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#C89191"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -204,6 +194,7 @@
                 >
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
+                    android:id="@+id/crv_user_LichSuCut"
                     android:layout_height="65dp">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -212,47 +203,25 @@
                         android:layout_gravity="center_vertical"
                         >
                         <ImageView
-                            android:layout_width="51dp"
-                            android:layout_height="48dp"
-                            android:src="@drawable/heart"
-                            />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:text="SỞ THÍCH DỊCH VỤ "
-                            android:gravity="center_vertical"
-                            />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="65dp">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_gravity="center_vertical"
-                        >
-                        <ImageView
-                            android:layout_width="51dp"
-                            android:layout_height="48dp"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:src="@drawable/clock_"
                             />
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:textColor="@color/black"
+                            android:layout_marginRight="10dp"
                             android:text="LỊCH SỬ CẮT "
-                            android:gravity="center_vertical"
+                            android:gravity="right"
                             />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#C89191"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -260,6 +229,7 @@
 
                 >
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/crv_user_ThongTinHoTroKhachHang"
                     android:layout_width="match_parent"
                     android:layout_height="65dp">
                     <LinearLayout
@@ -269,47 +239,25 @@
                         android:layout_gravity="center_vertical"
                         >
                         <ImageView
-                            android:layout_width="51dp"
-                            android:layout_height="48dp"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:src="@drawable/inform"
                             />
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
+                            android:textColor="@color/black"
                             android:layout_height="match_parent"
+
                             android:text="THÔNG TIN HỖ TRỢ KHÁCH HÀNG "
-                            android:gravity="center_vertical"
+                            android:gravity="right"
                             />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="65dp">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_gravity="center_vertical"
-                        >
-                        <ImageView
-                            android:layout_width="51dp"
-                            android:layout_height="48dp"
-                            android:src="@drawable/world"
-                            />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:text="HỆ THỐNG SALON "
-                            android:gravity="center_vertical"
-                            />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#C89191"/>
         </LinearLayout>
      </ScrollView>
 </LinearLayout>
