--- a/app/src/main/res/layout/activity_login_2.xml
+++ b/app/src/main/res/layout/activity_login_2.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F6F6F6">
@@ -32,20 +33,22 @@
         android:layout_marginTop="20dp"
         android:text="SIGN IN"
         android:textColor="#666C1C"
-        android:textSize="60sp"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_hair_salon" />
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/editTextPhone"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/custom_buttom_input"
         android:drawableStart="@drawable/ic_phone"
-        android:elevation="10dp"
+        android:drawablePadding="12dp"
         android:drawableTint="#FFA318"
+        android:elevation="10dp"
         android:hint="@string/phone"
         android:inputType="phone"
         android:paddingStart="20dp"
@@ -55,12 +58,14 @@
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/editTextPassword"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/custom_buttom_input"
         android:drawableStart="@drawable/ic_password"
         android:drawableEnd="@drawable/ic_show"
+        android:drawablePadding="12dp"
         android:elevation="10dp"
         android:hint="@string/password"
         android:inputType="textPassword"
@@ -71,14 +76,15 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonLogin"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/custom_button_login"
         android:elevation="20dp"
         android:text="@string/login"
         android:textColor="@color/white"
-        android:textSize="30sp"
+        android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,10 +105,11 @@
         android:id="@+id/tv_member"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="110dp"
         android:layout_marginTop="50dp"
         android:text="@string/not_a_member"
         android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/forget_password" />
 
@@ -110,11 +117,11 @@
         android:id="@+id/textViewRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="50dp"
-        android:layout_marginEnd="110dp"
         android:text="@string/register_now"
         android:textColor="#0A8ED9"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tv_member"
         app:layout_constraintTop_toBottomOf="@id/forget_password" />
 
     <ImageView
