--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -32,14 +32,15 @@
         android:layout_marginTop="14dp"
         android:text="Register"
         android:textColor="#666C1C"
-        android:textSize="50dp"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_hair_salon" />
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/editTextPhone"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="16dp"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/custom_buttom_input"
@@ -56,7 +57,8 @@
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/editTextPassword"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="16dp"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/custom_buttom_input"
@@ -72,7 +74,8 @@
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/editTextCnfPassword"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="16dp"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/custom_buttom_input"
@@ -88,7 +91,8 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonRegister"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="16dp"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/custom_button_login"
