--- a/app/src/main/res/layout/item_grid_khampha.xml
+++ b/app/src/main/res/layout/item_grid_khampha.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
     android:padding="10dp"
-    android:layout_height="match_parent">
+    android:layout_height="450dp"
+    app:cardCornerRadius="20dp"
+
+    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,8 +39,5 @@
                 android:id="@+id/item_khampha_tvtitle"/>
 
         </androidx.cardview.widget.CardView>
-
-
     </LinearLayout>
-
-</LinearLayout>
+</androidx.cardview.widget.CardView>
