--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
 
-        android:background="#CCCD5C"
+        android:background="#666666"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="8"
