--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -22,21 +22,15 @@
         android:textSize="20dp"
 
         />
-    <ImageView
-        android:id="@+id/image1"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-
+    <ListView
+        android:id="@+id/imgDetail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/description"
         android:text="chung"
-        />
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:id="@+id/imade2"
         />
 </LinearLayout>
