--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -297,7 +297,7 @@
                 android:layout_height="200dp"
                 android:orientation="vertical">
 
-                <androidx.recyclerview.widget.RecyclerView
+                <ListView
                     android:id="@+id/home_rcv_dichvu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
