--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,31 +6,44 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".activity.ActivityDetail">
-    <TextView
-        android:id="@+id/tile_detail_newfeed"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="chung"
-        android:textSize="20dp"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+            <TextView
+                android:id="@+id/tile_detail_newfeed"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="title"
+                android:textStyle="bold"
+                android:textColor="#252525"
+                android:textSize="40dp"
+                android:gravity="center_horizontal"
+                />
+            <TextView
+                android:id="@+id/tile_contentTitle_newfeed"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="chung"
+                android:textStyle="bold"
+                android:textColor="#534848"
+                android:textSize="20dp"
 
-        />
-    <TextView
-        android:id="@+id/tile_contentTitle_newfeed"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="chung"
-        android:textSize="20dp"
-
-        />
-    <ListView
-        android:id="@+id/imgDetail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/description"
-        android:text="chung"
-        />
+                />
+            <ListView
+                android:id="@+id/imgDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/title_description_newfeed"
+                android:text="chung"
+                />
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
