--- a/app/src/main/res/layout/activity_chon_dich_vu.xml
+++ b/app/src/main/res/layout/activity_chon_dich_vu.xml
@@ -9,41 +9,43 @@
     tools:context=".activity.BanGiaActivity">
 
     <androidx.cardview.widget.CardView
-        android:layout_weight="0.5"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_margin="20dp"
+        android:layout_weight="0.5"
         app:cardBackgroundColor="#D8F4E8"
         app:cardCornerRadius="40dp">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:text="Hãy để Salon phục vụ anh với những thứ tốt nhất "
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="Hãy để Salon phục vụ anh với những thứ tốt nhất " />
     </androidx.cardview.widget.CardView>
-<GridView
-    android:horizontalSpacing="10dp"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="8.5"
-    android:numColumns="2"
-    android:verticalSpacing="10dp"
-    android:layout_marginHorizontal="5dp"
-    android:id="@+id/chondichvu_gridview"/>
+
+    <GridView
+        android:id="@+id/chondichvu_gridview"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="5dp"
+        android:layout_weight="8.5"
+        android:horizontalSpacing="10dp"
+        android:numColumns="2"
+        android:verticalSpacing="10dp" />
 
 
-        <com.google.android.material.button.MaterialButton
-            android:layout_width="350.95dp"
-            android:layout_height="49dp"
-            android:text="Chọn Dịch Vụ"
-            android:textSize="24dp"
-            android:fontFamily="@font/roboto"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/chondichvu_btn_chondichvu"
+        android:layout_width="350.95dp"
+        android:layout_height="49dp"
+        android:layout_gravity="center|bottom"
+        android:layout_marginTop="24dp"
 
-            android:layout_gravity="center|bottom"
-            app:cornerRadius="10dp"
-            app:backgroundTint="#E5E5E5"
-            android:textColor="@color/black"
-            android:layout_marginTop="24dp"
-            android:id="@+id/chondichvu_btn_chondichvu"/>
+        android:fontFamily="@font/roboto"
+        android:text="Chọn Dịch Vụ"
+        android:textColor="@color/black"
+        android:textSize="24dp"
+        app:backgroundTint="#E5E5E5"
+        app:cornerRadius="10dp" />
 </androidx.appcompat.widget.LinearLayoutCompat>
