--- a/app/src/main/res/layout/activity_accout.xml
+++ b/app/src/main/res/layout/activity_accout.xml
@@ -43,7 +43,7 @@
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_marginTop="30dp"
-                    android:src="@mipmap/ic_launcher_round"
+                    android:src="@drawable/account"
                     app:shapeAppearanceOverlay="@style/cilcle"
                     />
             </LinearLayout>
